# fastapi-server

./: command.md  main.py  model.py  pyproject.toml  test.py  ui.html  word_segment.ipynb
