[project]
name = "python-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "jupyter>=1.1.1",
    "notebook>=7.5.3",
    "py-vncorenlp>=0.1.4",
    "requests>=2.32.5",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "transformers>=5.0.0",
]
